# sparql-language-server

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  example.sparql  justfile  log4rs.yml  pyproject.toml
.github/workflows/: build-test-publish.yml  github-actions-demo.yml
editor/: .prettierrc  Containerfile  package-lock.json  package.json  svelte.config.js  vite.config.ts
editor/src/: app.html
editor/src/lib/: config.ts  languageServer.worker.ts  sparql.configuration.json  sparql.theme.json  sparql.tmLanguage.json  sparql.tmTest.json
editor/src/routes/: +page.svelte  editor.svelte  header.svelte  loadingAnimation.svelte  statusbar.svelte  tree.svelte
src/: lib.rs  lsp.rs  main.rs  message_handler.rs  message_handler_.rs  rpc.rs  server.rs  state.rs  stdio_reader.rs
src/analysis/: mod.rs  state.rs
src/lsp/: analysis.rs  capabilities.rs  capabilities_BACKUP_60135.rs  capabilities_LOCAL_60135.rs  messages.rs  mod.rs  rpc.rs  textdocument.rs  textdocument_didopen.rs
src/lsp/analysis/: mod.rs  state.rs
src/lsp/messages/: initialize.rs  mod.rs  shutdown.rs  textdocument_completion.rs  textdocument_diagnostic.rs  textdocument_didchange.rs  textdocument_didopen.rs  textdocument_formatting.rs  textdocument_hover.rs  textdocument_publishdiagnostics.rs  utils.rs
src/message_handler/: formatting.rs  hovering.rs  mod.rs
src/message_handler/formatting/: core.rs  mod.rs  tests.rs  utils.rs
src/server/: anaysis.rs  capabilities.rs  commands.rs  common.rs  configuration.rs  mod.rs  state.rs  tools.rs
src/server/lsp/: base_types.rs  capabilities.rs  errors.rs  mod.rs  rpc.rs  textdocument.rs  workdoneprogress.rs
src/server/lsp/messages/: diagnostic.rs  initialize.rs  mod.rs  progress.rs  shutdown.rs  textdocument_codeaction.rs  textdocument_completion.rs  textdocument_diagnostic.rs  textdocument_didchange.rs  textdocument_didopen.rs  textdocument_didsave.rs  textdocument_formatting.rs  textdocument_hover.rs  textdocument_publishdiagnostics.rs  trace.rs  utils.rs  window_showmessage.rs  workspace_exectutecommand.rs
src/server/message_handler/: commands.rs  diagnostic.rs  hovering.rs  initialize.rs  lifecycle.rs  misc.rs  mod.rs  textdocument_syncronization.rs
src/server/message_handler/code_action/: mod.rs  quickfix.rs
src/server/message_handler/completion/: mod.rs
src/server/message_handler/formatting/: core.rs  mod.rs  tests.rs  utils.rs
tests/: format_stability_test.rs
tests/example-input/: failed-4_10203659.rq  failed-4_2219864.rq  failed-4_2221139.rq  failed-4_2235276.rq  failed-4_2245224.rq  failed-4_2284152.rq  failed-4_2286135.rq  failed-4_7011568.rq  failed-4_7016289.rq  failed-4_7018876.rq  failed-4_7021099.rq  insert.rq  wikidata-000.rq  wikidata-001.rq  wikidata-002.rq  wikidata-003.rq  wikidata-004.rq  wikidata-006.rq  wikidata-007.rq  wikidata-008.rq  wikidata-009.rq  wikidata-010.rq  wikidata-011.rq  wikidata-012.rq  wikidata-014.rq  wikidata-015.rq  wikidata-016.rq  wikidata-017.rq  wikidata-018.rq  wikidata-019.rq  wikidata-020.rq  wikidata-021.rq  wikidata-022.rq  wikidata-023.rq  wikidata-024.rq  wikidata-025.rq  wikidata-026.rq  wikidata-027.rq  wikidata-028.rq  wikidata-029.rq  (+339 more)
