[package]
name = "fichu"
version = "0.1.12"
edition = "2021"
authors = ["Ioannis Nezis <ioannis@nezis.de>"]
description = "A formatter for SPARQL queries"
repository = "https://github.com/IoannisNezis/sparql-language-server"
license = "MIT"
license-file = "LICENSE"
keywords = ["SPARQL", "formatter", "lsp", "wasm"]

[lib]
name = "sparql_language_server_web"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "fichu"
path = "src/main.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
# logging
log = "0.4.21"
env_logger = "0.11.3"
dirs-next = "2.0.0"

# json
serde = "1.0.203"
serde_json = "1.0.117"
serde_repr = "0.1.19"

# tree-sitter
tree-sitter = { package = "tree-sitter-c2rust", version = "0.24.3" }
# tree-sitter = "0.24.3"
tree-sitter-sparql = { version = "0.24" }
# tree-sitter-sparql = { path = "../tree-sitter-sparql/" }

# wasm
wasm-bindgen = "0.2.95"
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2", features = ["js"] }
serde-wasm-bindgen = "0.6.5"

# cli
clap = { version = "4.5.16", features = ["derive"] }
camino = "1.1.9"

# misc
indoc = "2.0.5"
nom = "7.1.3"
config = "0.14.0"
notify = "6.1.1"
streaming-iterator = "0.1.9"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-logger = { version = "0.2.0" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
log4rs = { version = "1.3.0" }

[build-dependencies]
cc = "1.0.100"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
