[package]
name = "qlue-ls"
version = "0.2.2"
edition = "2021"
authors = ["Ioannis Nezis <ioannis@nezis.de>"]
description = "A formatter for SPARQL queries"
repository = "https://github.com/IoannisNezis/qlue-ls"
license-file = "LICENSE"
keywords = ["SPARQL", "rdf", "lsp", "lsp-server", "wasm"]

[lib]
name = "qlue_ls"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "qlue-ls"
path = "src/main.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
# logging
log = "0.4.21"
env_logger = "0.11.3"
dirs-next = "2.0.0"

# json
serde = "1.0.203"
serde_json = "1.0.117"
serde_repr = "0.1.19"

# tree-sitter
tree-sitter = { package = "tree-sitter-c2rust", version = "0.24.3" }
# tree-sitter = "0.24.3"
tree-sitter-sparql = { version = "0.24" }
# tree-sitter-sparql = { path = "../tree-sitter-sparql/" }
streaming-iterator = "0.1.9"

# cli
clap = { version = "4.5.16", features = ["derive"] }
camino = "1.1.9"

# misc
indoc = "2.0.5"
config = "0.14.0"
notify = "6.1.1"
curies = "0.1.3"

wasm-bindgen = "0.2.95"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-logger = { version = "0.2.0" }
wasm-bindgen-futures = "0.4.49"
web-sys = { version = "0.3.76", features = [
	"ReadableStream",
	"ReadableStreamDefaultReader",
	"WritableStream",
	"WritableStreamDefaultWriter",
] }
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2", features = ["js"] }
serde-wasm-bindgen = "0.6.5"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
log4rs = { version = "1.3.0" }

[build-dependencies]
cc = "1.0.100"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
